deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homedir
  namespace: homedir
spec:
  type: ClusterIP
  selector:
    app: homedir
  ports:
    - port: 8080
      targetPort: 8080
