deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homedir
  namespace: homedir
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/static-ip: "homedir"
    networking.gke.io/managed-certificates: homedir-cert
spec:
  ingressClassName: gce
  rules:
    - host: homedir.opensourcesantiago.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homedir
                port:
                  number: 8080
